--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-      <p>I'm currently a student at MIT studying math and CS. Before that, I attended <a href="https://en.wikipedia.org/wiki/Whitney_M._Young_Magnet_High_School">Whitney Young</a>, a magnet high school in Chicago.</p>
+      <p>I'm currently a second-year undergrad at MIT studying math and CS. Before that, I attended <a href="https://en.wikipedia.org/wiki/Whitney_M._Young_Magnet_High_School">Whitney Young</a>, a magnet high school in Chicago.</p>
     </main>
 
 	</body>
