Update website with grade + more interests

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <title>Jason Chen</title>
@@ -14,7 +14,17 @@
     </header>
 
     <main>
-      <p>I'm currently a second-year undergrad at MIT studying math and CS. Before that, I attended <a href="https://en.wikipedia.org/wiki/Whitney_M._Young_Magnet_High_School">Whitney Young</a>, a magnet high school in Chicago.</p>
+      <p>
+        I'm currently a third-year undergrad at MIT studying math and CS,
+        especially things in their intersection, like functional programming
+        and category theory.
+      </p>
+      <p>
+        Other things that I'm interested in are linguistics, LaTeX, singing,
+        <a href="https://github.com/chezbgone/dotfiles">
+          customizing my computer
+        </a>, (Neo)vim, and Arch Linux.
+      </p>
     </main>
 
   </body>
