Fix spacing bug with link

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       </p>
       <p>
         Other things that I'm interested in are linguistics, LaTeX, singing,
-        <a href="https://github.com/chezbgone/dotfiles">
-          customizing my computer
-        </a>, (Neo)vim, and Arch Linux.
+        <a href="https://github.com/chezbgone/dotfiles">customizing my computer</a>,
+        (Neo)vim, and Arch Linux.
       </p>
     </main>
 
