--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </p>
       <p>
         Other things that I'm interested in are linguistics, LaTeX, singing,
+        video games,
         <a href="https://github.com/chezbgone/dotfiles">customizing my computer</a>,
         (Neo)vim, and Arch Linux.
       </p>
