Fix rendering bugs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Jason Chen</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
   </head>
   <body>
@@ -20,10 +22,14 @@
         and category theory.
       </p>
       <p>
-        Other things that I'm interested in are linguistics, LaTeX, singing,
-        video games,
-        <a href="https://github.com/chezbgone/dotfiles">customizing my computer</a>,
-        (Neo)vim, and Arch Linux.
+        Other things that I'm interested in are
+          linguistics,
+          LaTeX,
+          singing,
+          video games,
+          <a href="https://github.com/chezbgone/dotfiles">customizing my computer</a>,
+          (Neo)vim, and
+          Arch Linux.
       </p>
     </main>
 
