Update for fall 2021

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <main>
       <p>
-        I'm currently a third-year undergrad at MIT studying math and CS,
-        especially things in their intersection, like functional programming
-        and category theory.
+        I'm currently a fourth-year undergrad at MIT studying math and CS,
+        especially things in their intersection, like functional programming,
+        category theory, and type theory.
       </p>
       <p>
         Other things that I'm interested in are
